[Issue #6168] Date custom fields are styled so that confirm/cancel buttons are not wrapped and hidden by icker when shown in steps table

--- a/tm/tm.web/src/main/webapp/styles/structure.less
+++ b/tm/tm.web/src/main/webapp/styles/structure.less
@@ -2,13 +2,13 @@
 
 /* style for the ??? which contains the title of a page */
 .page-title {
-	
+
 }
 
 /* style for the div which holds the title of a "contextual content" pane */
 .ctx-title {
 	.cf;
-	
+
 	:first-child {
 		float: left;
 		height: 100%;
@@ -28,4 +28,12 @@
 #dashboard-doc {
 	text-align: center;
 	margin-top: 2%;
+}
+
+/* custom field type (cft) specific styles */
+td.cft-DATE_PICKER {
+	/* properly renders confirm / cancel buttons when jeditable is opened */
+	form {
+		white-space: nowrap;
+	}
 }
